--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "*.js",
     "source/*.html",
     "source/js/**/*.js",
-    "source/img/**/*.svg",
-    "source/less/**/*.less"
+    "source/icons/**/*.svg",
+    "source/**/*.less"
   ],
   "engines": {
     "node": "14.15.0"
